@@ -1,3 +1,12 @@
+2007-07-24  Adam Treat  <treat@kde.org>
+
+        Reviewed by Niko and Lars.
+
+        These are no longer necessary or used.
+
+        * WebCoreSupport/FrameLoaderClientQt.cpp:
+        * WebCoreSupport/FrameLoaderClientQt.h:
+
 2007-07-20  Adam Treat  <adam@staikos.net>
 
         Reviewed by George Staikos.
